updating layout issue on single event panel

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -13,7 +13,7 @@
 }
 
 #app-view-single {
-  position: absolute;
+  position: fixed;
   width: 100vw;
   height: 100vh;
   top: 0px;
